# Meshlis

./: '  README.md  client.py  requirements.txt  server.py
acoular/: triangulation.py
meshlis_ai/: generate_training_data.py  meshlis_ai.py  sound_source_model.pth
mic/: Cargo.toml
mic/client/: Cargo.toml
mic/client/src/: main.rs
mic/messaging/: Cargo.toml
mic/messaging/src/: lib.rs
mic/pyserver/: Cargo.toml  ai.py  server.py
mic/pyserver/src/: lib.rs
mic/server/: Cargo.toml
mic/server/src/: lib.rs  main.rs
trigonometry/: triangulation.py
